--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-dinky
+
+
+# Bem-vindo ao site do Design Patters BR
+
+Nosso site é voltado ao aprendizado de Design Patterns utilizando a linguagem C# como exemplo.
